enhance the appearance of the webpage

--- a/index.html
+++ b/index.html
@@ -8,5 +8,21 @@
     <script src="script.js"></script>
 </head>
 <body>
+    <div id="outer-container">
+        <div id="top-container">
+            <header>
+                <h1>
+                    Etch-A-Sketch
+                </h1> 
+            </header>
+        </div>
+        <div id="bottom-container">
+            <footer>
+                <h1>
+                    &#169 Megahard
+                </h1>
+            </footer>
+        </div>
+    </div>    
 </body>
 </html>
